--- a/okhttp-dnsoverhttps/build.gradle
+++ b/okhttp-dnsoverhttps/build.gradle
@@ -1,7 +1,12 @@
+applyOsgi(this)
+
 jar {
-  manifest {
-    attributes('Automatic-Module-Name': 'okhttp3.dnsoverhttps')
-  }
+  // MANIFEST.MF, including OSGi bnd instructions.
+  bnd '''
+  Export-Package: okhttp3.dnsoverhttps
+  Automatic-Module-Name: okhttp3.dnsoverhttps
+  Bundle-SymbolicName: com.squareup.okhttp3.dnsoverhttps
+  '''
 }
 
 dependencies {
