--- a/okhttp-logging-interceptor/build.gradle
+++ b/okhttp-logging-interceptor/build.gradle
@@ -1,9 +1,13 @@
 apply plugin: 'me.champeau.gradle.japicmp'
+applyOsgi(this)
 
 jar {
-  manifest {
-    attributes('Automatic-Module-Name': 'okhttp3.logging')
-  }
+  // MANIFEST.MF, including OSGi bnd instructions.
+  bnd '''
+  Export-Package: okhttp3.logging
+  Automatic-Module-Name: okhttp3.logging
+  Bundle-SymbolicName: com.squareup.okhttp3.logging
+  '''
 }
 
 dependencies {
