--- a/okhttp-brotli/build.gradle
+++ b/okhttp-brotli/build.gradle
@@ -1,7 +1,12 @@
+applyOsgi(this)
+
 jar {
-  manifest {
-    attributes('Automatic-Module-Name': 'okhttp3.brotli')
-  }
+  // MANIFEST.MF, including OSGi bnd instructions.
+  bnd '''
+  Export-Package: okhttp3.brotli
+  Automatic-Module-Name: okhttp3.brotli
+  Bundle-SymbolicName: com.squareup.okhttp3.brotli
+  '''
 }
 
 dependencies {
