Added okhttpinternal package attribute to export package statement

--- a/okhttp/build.gradle
+++ b/okhttp/build.gradle
@@ -8,7 +8,7 @@ jar {
   bnd '''
   Export-Package: \
   okhttp3,\
-  okhttp3.internal.*
+  okhttp3.internal.*;okhttpinternal=true;mandatory:=okhttpinternal
   Import-Package: \
   android.*;resolution:=optional,\
   dalvik.system;resolution:=optional,\
