--- a/settings.gradle
+++ b/settings.gradle
@@ -13,6 +13,7 @@ include ':okhttp'
 include ':okhttp-bom'
 include ':okhttp-brotli'
 include ':okhttp-dnsoverhttps'
+include ':okhttp-graal'
 include ':okhttp-hpacktests'
 include ':okhttp-logging-interceptor'
 include ':okhttp-sse'
