--- a/okcurl/build.gradle
+++ b/okcurl/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-  id "com.palantir.graal" version "0.7.1-20-g113a84d"
+  id "com.palantir.graal" version "0.7.1"
 }
 
 import org.apache.tools.ant.taskdefs.condition.Os
@@ -36,8 +36,6 @@ dependencies {
   implementation 'info.picocli:picocli-codegen:4.5.1'
   annotationProcessor 'info.picocli:picocli-codegen:4.5.1'
 
-  compileOnly project(':okhttp-graal')
-
   testImplementation project(':okhttp-testing-support')
   testImplementation deps.junit
   testImplementation deps.assertj
@@ -49,7 +47,7 @@ shadowJar {
 
 graal {
   mainClass "okhttp3.curl.Main"
-  outputName "okurl"
+  outputName "okcurl"
   graalVersion "20.2.0"
   javaVersion "11"
 
