Initial steps towards running tests in Graalvm
I want to confirm all of OkHttp works with Graalvm, and I'm hoping
to demonstrate that by getting the entire test suite running inside
Graalvm.

https://github.com/square/okhttp/issues/6296

--- a/settings.gradle
+++ b/settings.gradle
@@ -8,6 +8,7 @@ if (properties.containsKey('android.injected.invoked.from.ide') ||
   include ':android-test'
 }
 
+include ':native-image-tests'
 include ':okcurl'
 include ':okhttp'
 include ':okhttp-bom'
