--- a/settings.gradle
+++ b/settings.gradle
@@ -15,6 +15,7 @@ include ':okhttp-brotli'
 include ':okhttp-dnsoverhttps'
 include ':okhttp-hpacktests'
 include ':okhttp-logging-interceptor'
+include ':okhttp-mockwebserver'
 include ':okhttp-sse'
 include ':okhttp-testing-support'
 include ':okhttp-tls'
