--- a/samples/unixdomainsockets/build.gradle
+++ b/samples/unixdomainsockets/build.gradle
@@ -1,5 +1,6 @@
 dependencies {
   implementation project(':okhttp')
+  implementation deps.junit
   implementation project(':mockwebserver')
   implementation deps.jnrUnixsocket
 }
