Optional junit dep

--- a/samples/guide/build.gradle
+++ b/samples/guide/build.gradle
@@ -2,6 +2,7 @@ apply plugin: 'kotlin-kapt'
 
 dependencies {
   implementation project(':okhttp')
+  implementation deps.junit
   implementation project(':mockwebserver')
   implementation project(':okhttp-tls')
   implementation deps.animalSniffer
