--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -124,7 +124,7 @@ jobs:
 
   testjdk8:
     docker:
-      - image: circleci/openjdk:11.0.8-jdk-buster
+      - image: circleci/openjdk:8u242-jdk-buster
 
     environment:
       JVM_OPTS: -Xmx1g
@@ -139,7 +139,7 @@ jobs:
 
   testjdk8alpn:
     docker:
-      - image: circleci/openjdk:11.0.8-jdk-buster
+      - image: circleci/openjdk:8u242-jdk-buster
 
     environment:
       JVM_OPTS: -Xmx1g
