Java Toolchain for splitting compile and CI test runner

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -124,7 +124,7 @@ jobs:
 
   testjdk8:
     docker:
-      - image: circleci/openjdk:8u242-jdk-buster
+      - image: circleci/openjdk:11.0.6-jdk-stretch
 
     environment:
       JVM_OPTS: -Xmx1g
@@ -135,11 +135,11 @@ jobs:
 
       - runtests:
           platform: jdk8
-          testjdk: -Dtest.java.version=8
+          testjdk: -Dtest.java.version=8 -Dorg.gradle.java.installations.paths=/usr/lib/jvm/java-8-openjdk-amd64
 
   testjdk8alpn:
     docker:
-      - image: circleci/openjdk:8u242-jdk-buster
+      - image: circleci/openjdk:11.0.6-jdk-stretch
 
     environment:
       JVM_OPTS: -Xmx1g
@@ -150,7 +150,7 @@ jobs:
 
       - runtests:
           platform: jdk8alpn
-          testjdk: -Dtest.java.version=8 -Dalpn.boot.version=8.1.13.v20181017
+          testjdk: -Dtest.java.version=8 -Dalpn.boot.version=8.1.13.v20181017 -Dorg.gradle.java.installations.paths=/usr/lib/jvm/java-8-openjdk-amd64
 
   testopenjsse:
     docker:
