Samples compile with JDK 14

--- a/samples/guide/build.gradle
+++ b/samples/guide/build.gradle
@@ -9,6 +9,12 @@ dependencies {
   kapt deps.moshiKotlin
 }
 
+java {
+  toolchain {
+    languageVersion = JavaLanguageVersion.of(14)
+  }
+}
+
 tasks.withType(JavaCompile) {
   options.warnings = false
 }
